# wechat_robot

./: .gitignore  CMakeLists.txt  Main.qml  global.cpp  global.h  logging.cpp  logging.h  main.cpp
cmake/: wx_copy_vcpkg_dlls.cmake
component/: MyButton.qml  myPopup.qml
manager/: wechatmanager.cpp  wechatmanager.h
modules/: injector.cpp  injector.h  searcher.cpp  searcher.h  starter.cpp  starter.h
proto/: message.proto
server/: cppserver.cpp  cppserver.h
tools/: tools.cpp  tools.h
wxdll32/: wxdll32.sln  笔记.md
wxdll32/wxdll32/: call_sendMessage.cpp  call_sendMessage.h  client.cpp  client.h  createmutex_hook.asm  dllmain.cpp  event_consumer.cpp  event_consumer.h  event_queue.cpp  event_queue.h  framework.h  head_hook.asm  hook_head.cpp  hook_head.h  hook_log.cpp  hook_log.h  hook_mutex.cpp  hook_mutex.h  hook_qrcode.cpp  hook_qrcode.h  hook_receiveMessage.cpp  hook_receiveMessage.h  log_consumer.cpp  log_consumer.h  log_flow.cpp  log_flow.h  log_productor.cpp  log_productor.h  log_queue.cpp  log_queue.h  login_flow.cpp  login_flow.h  message.pb.cc  message.pb.h  multiple_wechat.cpp  multiple_wechat.h  pch.h  public.cpp  public.h  qrcode_hook.asm  (+10 more)
